--- a/.env.production.example
+++ b/.env.production.example
@@ -1,43 +1,44 @@
-# Production Environment Configuration
-# Copy this file to .env and fill in your production values
+# This is an example file for production environment variables.
+# Copy this file to .env and fill in the values for your production environment.
 
-# Docker Hub Configuration
+# -------------------------------------
+# Docker & Image Configuration
+# -------------------------------------
+# Your Docker Hub username is required to pull the correct images.
 DOCKERHUB_USERNAME=your-dockerhub-username
 
+# The following tags are typically set by the CI/CD pipeline.
+# For manual deployment, you can set them to 'latest' or a specific git SHA.
+API_IMAGE_TAG=latest
+WEB_IMAGE_TAG=latest
+
+
+# -------------------------------------
 # Database Configuration
-DB_NAME=campusdb
-DB_USER=postgres
-DB_PASSWORD=your-secure-database-password-here
+# -------------------------------------
+# These values are used to configure the PostgreSQL container.
+POSTGRES_USER=your-prod-db-user
+POSTGRES_PASSWORD=your-secure-prod-db-password
+POSTGRES_DB=your-prod-db-name
 
-# JWT Configuration
-# Generate a strong random string with: openssl rand -base64 32
-JWT_SECRET=your-super-secure-jwt-secret-key-for-production
+# This is the full connection string used by the API to connect to the database.
+# Note that the host is 'postgres', which is the service name in docker-compose.prod.yml.
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public"
 
-# Application URLs
+
+# -------------------------------------
+# Application Secrets
+# -------------------------------------
+# A strong, random string used for signing JWTs. Generate one with: openssl rand -base64 32
+JWT_SECRET=your-super-secure-jwt-secret
+
+# The public-facing URL of your web application.
 WEB_APP_URL=https://your-domain.com
-PORT=8080
-NODE_ENV=production
 
-# OAuth Providers
-# Google OAuth Setup:
-# 1. Go to https://console.cloud.google.com/
-# 2. Create a new project or select existing
-# 3. Enable Google+ API
-# 4. Create OAuth 2.0 credentials
-# 5. Add your production domain to authorized origins
-# 6. Add https://your-domain.com/api/auth/google/callback to authorized redirect URIs
+
+# -------------------------------------
+# Google OAuth Credentials
+# -------------------------------------
+# These are obtained from the Google Cloud Console for your production application.
 GOOGLE_CLIENT_ID=your-production-google-client-id
-GOOGLE_CLIENT_SECRET=your-production-google-client-secret
-
-
-
-# Database Connection String (automatically generated from above values)
-# DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
-
-# Note: In production, ensure you:
-# 1. Use strong, unique passwords
-# 2. Generate JWT secrets with proper entropy
-# 3. Configure OAuth providers with production domains
-# 4. Set up SSL/TLS certificates
-# 5. Configure firewall rules
-# 6. Set up regular database backups 
+GOOGLE_CLIENT_SECRET=your-production-google-client-secret 
