--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
@@ -30,15 +31,16 @@
     "@fastify/cors": "^8.4.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/oauth2": "^7.8.0",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^6.12.0",
+    "ajv-formats": "^3.0.1",
     "bcryptjs": "^2.4.3",
     "core": "file:../../packages/core",
-    "db-postgres": "file:../../packages/db-postgres",
     "dompurify": "^3.2.6",
     "fastify": "^4.24.3",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
+    "qrcode": "^1.5.3",
     "shared-types": "file:../../packages/shared-types",
     "speakeasy": "^2.0.0",
     "validator": "^13.15.15",
@@ -46,21 +48,25 @@
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.8.0",
+    "@faker-js/faker": "^8.3.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.15.2",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/coverage-v8": "^2.0.0",
+    "prisma": "^6.12.0",
     "supertest": "^7.0.0",
+    "totp-generator": "^1.0.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.6.2",
+    "tsx": "^4.11.2",
     "typescript": "^5.3.3",
     "vite": "^6.1.6",
-    "vitest": "^3.2.4"
+    "vitest": "^2.0.0",
+    "vitest-mock-extended": "^2.0.0"
   },
   "keywords": [],
   "author": ""
