--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,8 @@
     "@hookform/resolvers": "^5.1.1",
     "@vitest/coverage-v8": "^1.6.0",
     "axios": "^1.6.2",
+    "framer-motion": "^12.23.9",
+    "lucide-react": "^0.526.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.1",
