--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push",
+    "db:reset": "prisma db push --force-reset",
     "studio": "prisma studio",
     "generate": "prisma generate",
     "db:clean": "prisma migrate reset --force",
