--- a/package.json
+++ b/package.json
@@ -8,12 +8,34 @@
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "test": "turbo test",
-    "clean": "find . \\( -name 'node_modules' -o -name 'dist' -o -name '.turbo' -o -name 'coverage' -o -name '.next' -o -name '.cache' -o -name '.nyc_output' -o -name 'out' -o -name '.prisma' \\) -type d -prune -exec rm -rf '{}' + && find . \\( -name '*.log' -o -name '*.lcov' \\) -type f -delete",
+    "test:watch": "turbo test:watch",
+    "test:specific": "turbo test:specific",
+    "test:coverage": "turbo test:coverage",
+    "test:no-coverage": "turbo test:no-coverage",
+    "clean": "find . \\( -name 'node_modules' -o -name 'dist' -o -name 'build' -o -name '.turbo' -o -name 'coverage' -o -name '.next' -o -name '.cache' -o -name '.nyc_output' -o -name 'out' -o -name '.prisma' -o -name '.vite' -o -name 'temp' -o -name 'tmp' \\) -type d -prune -exec rm -rf '{}' + && find . -path './node_modules' -prune -o \\( -name '*.log' -o -name '*.lcov' -o -name '*.tsbuildinfo' -o -name '*.tmp' -o -name '*.temp' -o -name '.DS_Store' -o -name 'Thumbs.db' -o -name '*.swp' -o -name '*.swo' -o -name '*~' \\) -type f -print0 | xargs -0 rm -f",
+    "start": "npm run start --workspace=apps/api",
+    "preview": "npm run preview --workspace=apps/web",
     "db:migrate:dev": "npm run migrate:dev --workspace=apps/api",
+    "db:migrate:deploy": "npm run migrate:deploy --workspace=apps/api",
+    "db:push": "npm run db:push --workspace=apps/api",
     "db:studio": "npm run studio --workspace=apps/api",
-    "turbosetup": "cp apps/api/.env.example apps/api/.env",
+    "db:generate": "npm run generate --workspace=apps/api",
     "db:seed": "npm run db:seed --workspace=apps/api",
     "db:clean": "npm run db:clean --workspace=apps/api",
+    "db:reset": "npm run db:reset --workspace=apps/api",
+    "api:dev": "npm run dev --workspace=apps/api",
+    "api:build": "npm run build --workspace=apps/api",
+    "api:start": "npm run start --workspace=apps/api",
+    "api:test": "npm run test --workspace=apps/api",
+    "api:test:watch": "npm run test:watch --workspace=apps/api",
+    "api:test:coverage": "npm run test:coverage --workspace=apps/api",
+    "web:dev": "npm run dev --workspace=apps/web",
+    "web:build": "npm run build --workspace=apps/web",
+    "web:preview": "npm run preview --workspace=apps/web",
+    "web:test": "npm run test --workspace=apps/web",
+    "web:test:watch": "npm run test:watch --workspace=apps/web",
+    "web:test:coverage": "npm run test:coverage --workspace=apps/web",
+    "turbosetup": "cp apps/api/.env.example apps/api/.env",
     "docker:dev": "docker compose up --build",
     "docker:dev:down": "docker compose down",
     "docker:dev:clean": "docker compose down -v && docker system prune -f",
@@ -21,6 +43,8 @@
     "docs:serve": "npm run docs:serve --workspace=apps/api",
     "docs:validate": "npm run docs:validate --workspace=apps/api",
     "docs:test": "npm run docs:test --workspace=apps/api",
+    "docs:json": "npm run docs:json --workspace=apps/api",
+    "docs:yaml": "npm run docs:yaml --workspace=apps/api",
     "monitor:api": "newman run monitoring/postman-collection.json -e monitoring/environment.json --reporters cli",
     "monitor:performance": "artillery run monitoring/artillery-config.yml",
     "monitor:all": "npm run monitor:api && npm run monitor:performance",
@@ -40,6 +64,7 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "qrcode": "^1.5.4",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "validator": "^13.15.15"
   }
 }
